# Python-week1

./: README.md  main.py  pyproject.toml  requirements.txt
src/module1_task1/: decorator.py
src/module1_task2/: decision.py  singleton.py
src/module1_task3/: decision.py
src/module2_task1/: decision.py
src/module3_task1/: decision.py  results.json
src/module3_task2/: decision.py  results.jsonl  urls.txt
src/module4_task1/: decision.py  result.json
src/module6_task1/: decision.py
