[project]
name = "python-week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "ruff>=0.11.2",
]
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
